--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "patrick14754@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "nesbot/carbon": "^2.41"
+    }
 }
